--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,33 +1,17 @@
 <% content_for :title, "Home - ES School" %>
 
-<div class="container">
-  <header>
-    <h1>ES School Management System</h1>
-  </header>
+<h1>ES School Management System</h1>
 
-  <nav>
-    <ul>
-      <% if user_signed_in? %>
-        <li><a href="<%= classrooms_path %>">Classrooms</a></li>
-        <% if current_user.dean? || current_user.teacher? %>
-          <li><a href="<%= students_path %>">Students</a></li>
-        <% end %>
-        <% if current_user.dean? %>
-          <li><a href="<%= users_path %>">Users</a></li>
-        <% end %>
-        <li><a href="<%= destroy_user_session_path %>" data-turbo-method="delete">Sign Out</a></li>
-      <% else %>
-        <li><a href="<%= new_user_session_path %>">Sign In</a></li>
-        <li><a href="<%= new_user_registration_path %>">Sign Up</a></li>
-      <% end %>
-    </ul>
-  </nav>
-
-  <div>
-    <h2>Welcome to ES School Management System</h2>
-    <p>This system helps manage classrooms, students, and teachers. Use the navigation above to get started.</p>
-    <% unless user_signed_in? %>
-      <p>Please sign in to access the full features of the system.</p>
-    <% end %>
-  </div>
-</div>
+<ul>
+  <% if user_signed_in? %>
+    <li><%= link_to "Classrooms", classrooms_path %></li>
+    <li><%= link_to "Students", students_path %></li>
+    <li><%= link_to "Courses", courses_path %></li>
+    <li><%= link_to "Grades", grades_path %></li>
+    <li><%= link_to "Users", users_path %></li>
+    <li><%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %></li>
+  <% else %>
+    <li><%= link_to "Sign In", new_user_session_path %></li>
+    <li><%= link_to "Sign Up", new_user_registration_path %></li>
+  <% end %>
+</ul> 
