--- a/app/views/class_types/_form.html.erb
+++ b/app/views/class_types/_form.html.erb
@@ -18,12 +18,12 @@
 
   <div>
     <%= form.label :description, style: "display: block" %>
-    <%= form.textarea :description %>
+    <%= form.text_area :description %>
   </div>
 
   <div>
     <%= form.label :is_archived, style: "display: block" %>
-    <%= form.checkbox :is_archived %>
+    <%= form.check_box :is_archived %>
   </div>
 
   <div>
