--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,9 @@
- 
+<% content_for :title, "New User" %>
+
+<h1>New User</h1>
+
+<%= render "form", user: @user %>
+
+<div>
+  <%= link_to "Back to users", users_path %>
+</div> 
