--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,7 @@
     <li><%= link_to "Courses", courses_path %></li>
     <li><%= link_to "Grades", grades_path %></li>
     <li><%= link_to "Users", users_path %></li>
+    <li><%= link_to "Teachers", teachers_path %></li>
     <li><%= link_to "Rooms", rooms_path %></li>
     <li><%= link_to "Class Types", class_types_path %></li>
     <li><%= link_to "Themes", themes_path %></li>
