--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,6 +14,7 @@
     <li><%= link_to "Class Types", class_types_path %></li>
     <li><%= link_to "Themes", themes_path %></li>
     <li><%= link_to "Addresses", addresses_path %></li>
+    <li><%= link_to "Quarters", quarters_path %></li>
     <li><%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %></li>
   <% else %>
     <li><%= link_to "Sign In", new_user_session_path %></li>
