Refactor course and user models: replace module_id with theme_id, update associations, and enhance authorization policies

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -32,8 +32,8 @@
   </div>
 
   <div>
-    <%= form.label :module_id, style: "display: block" %>
-    <%= form.text_field :module_id %>
+    <%= form.label :theme_id, style: "display: block" %>
+    <%= form.text_field :theme_id %>
   </div>
 
   <div>
