--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -3,6 +3,7 @@
 <%= render @classroom %>
 
 <div>
+  <%= link_to "View Schedule", calendar_classroom_path(@classroom), class: "btn btn-primary" %>
   <%= link_to "Edit this classroom", edit_classroom_path(@classroom) %> |
   <%= link_to "Back to classrooms", classrooms_path %>
 
