--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= yield(:title).presence || "ES School" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "ES School" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -9,6 +9,7 @@
     <%= csp_meta_tag %>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
@@ -49,9 +50,17 @@
               <% end %>
               
               <% if current_user.student? %>
-                <li class="nav-item">
-                  <%= link_to "My Class", classroom_path(current_user.classrooms.first), class: "nav-link" if current_user.classrooms.any? %>
-                </li>
+                <% if current_user.classrooms.any? %>
+                  <li class="nav-item">
+                    <%= link_to "My Class", classroom_path(current_user.classrooms.first), class: "nav-link" %>
+                  </li>
+                  <li class="nav-item">
+                    <%= link_to "My Calendar", calendar_classroom_path(current_user.classrooms.first), class: "nav-link" %>
+                  </li>
+                  <li class="nav-item">
+                    <%= link_to "My Grades", student_path(current_user.students.first), class: "nav-link" %>
+                  </li>
+                <% end %>
               <% end %>
 
               <% if current_user.dean? %>
