--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,12 +88,10 @@
           <ul class="navbar-nav">
             <% if user_signed_in? %>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <%= current_user.full_name %>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                  <li><%= link_to "Profile", edit_user_registration_path, class: "dropdown-item" %></li>
-                  <li><hr class="dropdown-divider"></li>
                   <li>
                     <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
                   </li>
