--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div>
+    <%= form.label :phone, style: "display: block" %>
+    <%= form.telephone_field :phone %>
+  </div>
+
+  <div>
     <%= form.label :password, style: "display: block" %>
     <%= form.password_field :password %>
   </div>
