--- a/app/views/addresses/_address.html.erb
+++ b/app/views/addresses/_address.html.erb
@@ -1,12 +1,7 @@
 <div id="<%= dom_id address %>">
   <p>
-    <strong>City:</strong>
-    <%= address.city %>
-  </p>
-
-  <p>
-    <strong>Npa:</strong>
-    <%= address.npa %>
+    <strong>House:</strong>
+    <%= address.house %>
   </p>
 
   <p>
@@ -15,17 +10,19 @@
   </p>
 
   <p>
-    <strong>House:</strong>
-    <%= address.house %>
+    <strong>City:</strong>
+    <%= address.city %>
   </p>
 
   <p>
-    <strong>Apartment number:</strong>
-    <%= address.apartment_number %>
+    <strong>NPA:</strong>
+    <%= address.npa %>
   </p>
 
-  <p>
-    <strong>User:</strong>
-    <%= address.user ? address.user.email : "None" %>
-  </p>
+  <% if address.apartment_number.present? %>
+    <p>
+      <strong>Apartment Number:</strong>
+      <%= address.apartment_number %>
+    </p>
+  <% end %>
 </div>
