--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -1,11 +1,58 @@
-<% content_for :title, "New address" %>
+<% content_for :title, "New Address" %>
 
-<h1>New address</h1>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">
+          <h2 class="mb-0">New Address</h2>
+        </div>
+        <div class="card-body">
+          <%= form_with(model: @address, local: true) do |f| %>
+            <% if @address.errors.any? %>
+              <div class="alert alert-danger">
+                <h4><%= pluralize(@address.errors.count, "error") %> prohibited this address from being saved:</h4>
+                <ul>
+                  <% @address.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                </ul>
+              </div>
+            <% end %>
 
-<%= render "form", address: @address %>
+            <div class="mb-4">
+              <h4 class="mb-3">Address Information</h4>
+              <div class="row g-3">
+                <div class="col-md-12">
+                  <%= f.label :street, "Street", class: "form-label" %>
+                  <%= f.text_field :street, class: "form-control" %>
+                </div>
+                <div class="col-md-4">
+                  <%= f.label :house, "House Number", class: "form-label" %>
+                  <%= f.text_field :house, class: "form-control" %>
+                </div>
+                <div class="col-md-8">
+                  <%= f.label :apartment_number, "Apartment Number", class: "form-label" %>
+                  <%= f.text_field :apartment_number, class: "form-control" %>
+                </div>
+                <div class="col-md-6">
+                  <%= f.label :city, "City", class: "form-label" %>
+                  <%= f.text_field :city, class: "form-control" %>
+                </div>
+                <div class="col-md-6">
+                  <%= f.label :npa, "Postal Code", class: "form-label" %>
+                  <%= f.text_field :npa, class: "form-control" %>
+                </div>
+              </div>
+            </div>
 
-<br>
-
-<div>
-  <%= link_to "Back to addresses", addresses_path %>
+            <div class="d-flex justify-content-between">
+              <%= link_to "Back", :back, class: "btn btn-secondary" %>
+              <%= f.submit "Create Address", class: "btn btn-primary" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
