--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -1,10 +1,62 @@
-<p style="color: green"><%= notice %></p>
+<% content_for :title, "Address Details" %>
 
-<%= render @address %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header d-flex justify-content-between align-items-center">
+          <h2 class="mb-0">Address Details</h2>
+          <% if policy(@address).edit? %>
+            <%= link_to edit_address_path(@address), class: "btn btn-outline-primary" do %>
+              <i class="bi bi-pencil"></i> Edit
+            <% end %>
+          <% end %>
+        </div>
+        <div class="card-body">
+          <% if notice %>
+            <div class="alert alert-success" role="alert">
+              <%= notice %>
+            </div>
+          <% end %>
 
-<div>
-  <%= link_to "Edit this address", edit_address_path(@address) %> |
-  <%= link_to "Back to addresses", addresses_path %>
+          <div class="row g-3">
+            <div class="col-12">
+              <h5>Street Address</h5>
+              <p class="lead mb-0">
+                <%= @address.street %> <%= @address.house %>
+                <% if @address.apartment_number.present? %>
+                  , Apt. <%= @address.apartment_number %>
+                <% end %>
+              </p>
+            </div>
 
-  <%= button_to "Destroy this address", @address, method: :delete %>
+            <div class="col-md-6">
+              <h5>City</h5>
+              <p class="lead mb-0"><%= @address.city %></p>
+            </div>
+
+            <div class="col-md-6">
+              <h5>Postal Code</h5>
+              <p class="lead mb-0"><%= @address.npa %></p>
+            </div>
+          </div>
+
+          <div class="mt-4 d-flex justify-content-between">
+            <%= link_to addresses_path, class: "btn btn-secondary" do %>
+              <i class="bi bi-arrow-left"></i> Back to Addresses
+            <% end %>
+            
+            <% if policy(@address).destroy? %>
+              <%= button_to address_path(@address), 
+                  method: :delete, 
+                  class: "btn btn-danger",
+                  form: { data: { turbo_confirm: "Are you sure you want to delete this address?" } } do %>
+                <i class="bi bi-trash"></i> Delete
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
