--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -1,11 +1,82 @@
-<% content_for :title, "New teacher" %>
+<% content_for :title, "New Teacher" %>
 
-<h1>New teacher</h1>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">
+          <h2 class="mb-0">New Teacher</h2>
+        </div>
+        <div class="card-body">
+          <%= form_with(model: @teacher, local: true) do |f| %>
+            <% if @teacher.errors.any? %>
+              <div class="alert alert-danger">
+                <h4><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h4>
+                <ul>
+                  <% @teacher.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                </ul>
+              </div>
+            <% end %>
 
-<%= render "form", teacher: @teacher %>
+            <div class="mb-4">
+              <h4 class="mb-3">User Information</h4>
+              <div class="row mb-3">
+                <div class="col-md-6">
+                  <%= f.label :first_name, class: "form-label" %>
+                  <%= f.text_field :first_name, class: "form-control" %>
+                </div>
+                <div class="col-md-6">
+                  <%= f.label :last_name, class: "form-label" %>
+                  <%= f.text_field :last_name, class: "form-control" %>
+                </div>
+              </div>
 
-<br>
+              <div class="mb-3">
+                <%= f.label :email, class: "form-label" %>
+                <%= f.email_field :email, class: "form-control" %>
+              </div>
 
-<div>
-  <%= link_to "Back to teachers", teachers_path %>
+              <div class="mb-3">
+                <%= f.label :phone, class: "form-label" %>
+                <%= f.telephone_field :phone, class: "form-control" %>
+              </div>
+
+              <div class="row mb-3">
+                <div class="col-md-6">
+                  <%= f.label :password, class: "form-label" %>
+                  <%= f.password_field :password, class: "form-control" %>
+                </div>
+                <div class="col-md-6">
+                  <%= f.label :password_confirmation, class: "form-label" %>
+                  <%= f.password_field :password_confirmation, class: "form-control" %>
+                </div>
+              </div>
+            </div>
+
+            <div class="mb-4">
+              <h4 class="mb-3">Contact Information</h4>
+              <div class="mb-3">
+                <%= f.label :address_id, "Address", class: "form-label" %>
+                <div class="input-group">
+                  <%= f.collection_select :address_id, Address.all, :id, :full_address, 
+                      { include_blank: "Select an address..." }, 
+                      { class: "form-select" } %>
+                  <%= link_to new_address_path, class: "btn btn-outline-secondary" do %>
+                    <i class="bi bi-plus-lg"></i> New Address
+                  <% end %>
+                </div>
+              </div>
+            </div>
+
+            <div class="d-flex justify-content-between">
+              <%= link_to "Back to Teachers", teachers_path, class: "btn btn-secondary" %>
+              <%= f.submit "Create Teacher", class: "btn btn-primary" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
