--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,90 @@
 <% content_for :title, "New User" %>
 
-<h1>New User</h1>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center mb-4">
+            <h2 class="card-title mb-0">New User</h2>
+            <%= link_to users_path, class: "btn btn-outline-secondary" do %>
+              <i class="bi bi-arrow-left"></i> Back to Users
+            <% end %>
+          </div>
 
-<%= render "form", user: @user %>
+          <%= form_with(model: @user, local: true) do |f| %>
+            <% if @user.errors.any? %>
+              <div class="alert alert-danger">
+                <h4 class="alert-heading"><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h4>
+                <ul class="mb-0">
+                  <% @user.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                </ul>
+              </div>
+            <% end %>
 
-<div>
-  <%= link_to "Back to users", users_path %>
+            <div class="row g-3">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :first_name, class: "form-label" %>
+                  <%= f.text_field :first_name, class: "form-control" %>
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :last_name, class: "form-label" %>
+                  <%= f.text_field :last_name, class: "form-control" %>
+                </div>
+              </div>
+
+              <div class="col-md-12">
+                <div class="form-group">
+                  <%= f.label :email, class: "form-label" %>
+                  <%= f.email_field :email, class: "form-control" %>
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :password, class: "form-label" %>
+                  <%= f.password_field :password, class: "form-control" %>
+                  <div class="form-text">Minimum 6 characters</div>
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :password_confirmation, class: "form-label" %>
+                  <%= f.password_field :password_confirmation, class: "form-control" %>
+                </div>
+              </div>
+
+              <div class="col-md-12">
+                <div class="form-group">
+                  <%= f.label :role, class: "form-label" %>
+                  <%= f.select :role, 
+                      options_for_select([
+                        ['Dean', 'dean'],
+                        ['Teacher', 'teacher'],
+                        ['Student', 'student']
+                      ]), 
+                      { include_blank: 'Select a role' }, 
+                      { class: "form-select" } %>
+                </div>
+              </div>
+
+              <div class="col-12">
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                  <%= link_to "Cancel", users_path, class: "btn btn-outline-secondary me-2" %>
+                  <%= f.submit "Create User", class: "btn btn-primary" %>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div> 
