--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,11 @@
   </p>
   
   <p>
+    <strong>Phone:</strong>
+    <%= @user.phone %>
+  </p>
+  
+  <p>
     <strong>Roles:</strong>
     <%= @user.roles.map(&:name).map(&:humanize).join(', ') %>
   </p>
